--- a/WiseCare/WiseCareApp/public/css/jquery-jvectormap-1.2.2.css
+++ b/WiseCare/WiseCareApp/public/css/jquery-jvectormap-1.2.2.css
@@ -6,7 +6,7 @@
     -moz-border-radius: 2px;
     border-radius: 2px;
     background: white;
-    color: #d4d4d4;
+    color: #004080;
     font-family: sans-serif, Verdana;
     font-size: smaller;
     padding: 3px;
