--- a/WiseCare/WiseCareApp/views/index.ejs
+++ b/WiseCare/WiseCareApp/views/index.ejs
@@ -47,7 +47,7 @@
             </div>
 
             <!--logo start-->
-            <a href="index.html" class="logo">Wise <span class="lite">Care</span></a>
+            <a href="/" class="logo">Wise <span class="lite">Care</span></a>
             <!--logo end-->
 
             <div class="nav search-row" id="top_menu">
@@ -120,6 +120,7 @@
                           <li><a class="" href="/metal">Metal level based</a></li>
                           <li><a class="" href="/premiumDiff">Premium Difference</a></li>
                           <li><a class="" href="/deaths">Death Per Year</a></li>
+                          <li><a class="" href="/insured">Insured</a></li>
                       </ul>
                   </li>
                   <li>                     
@@ -156,7 +157,7 @@
 				<div class="col-lg-12">
 					<h3 class="page-header"><i class="fa fa-laptop"></i> Dashboard</h3>
 					<ol class="breadcrumb">
-						<li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
+						<li><i class="fa fa-home"></i><a href="/">Home</a></li>
 						<li><i class="fa fa-laptop"></i>Dashboard</li>						  	
 					</ol>
 				</div>
