--- a/WiseCare/WiseCareApp/views/stateBased.ejs
+++ b/WiseCare/WiseCareApp/views/stateBased.ejs
@@ -41,7 +41,7 @@
             </div>
 
             <!--logo start-->
-            <a href="index.html" class="logo">Nice <span class="lite">Admin</span></a>
+            <a href="/" class="logo">Nice <span class="lite">Admin</span></a>
             <!--logo end-->
 
             <div class="nav search-row" id="top_menu">
@@ -303,71 +303,23 @@
               <!-- sidebar menu start-->
               <ul class="sidebar-menu">                
                   <li class="active">
-                      <a class="" href="index.html">
+                      <a class="" href="/">
                           <i class="icon_house_alt"></i>
                           <span>Dashboard</span>
                       </a>
                   </li>
 				  <li class="sub-menu">
                       <a href="javascript:;" class="">
-                          <i class="icon_document_alt"></i>
-                          <span>Forms</span>
-                          <span class="menu-arrow arrow_carrot-right"></span>
-                      </a>
-                      <ul class="sub">
-                          <li><a class="" href="form_component.html">Form Elements</a></li>                          
-                          <li><a class="" href="form_validation.html">Form Validation</a></li>
-                      </ul>
-                  </li>       
-                  <li class="sub-menu">
-                      <a href="javascript:;" class="">
                           <i class="icon_desktop"></i>
-                          <span>UI Fitures</span>
+                          <span>Graphs</span>
                           <span class="menu-arrow arrow_carrot-right"></span>
                       </a>
                       <ul class="sub">
-                          <li><a class="" href="general.html">Components</a></li>
-                          <li><a class="" href="buttons.html">Buttons</a></li>
-                          <li><a class="" href="grids.html">Grids</a></li>
-                      </ul>
-                  </li>
-                  <li>
-                      <a class="" href="widgets.html">
-                          <i class="icon_genius"></i>
-                          <span>Widgets</span>
-                      </a>
-                  </li>
-                  <li>                     
-                      <a class="" href="chart-chartjs.html">
-                          <i class="icon_piechart"></i>
-                          <span>Charts</span>
-                          
-                      </a>
-                                         
-                  </li>
-                             
-                  <li class="sub-menu">
-                      <a href="javascript:;" class="">
-                          <i class="icon_table"></i>
-                          <span>Tables</span>
-                          <span class="menu-arrow arrow_carrot-right"></span>
-                      </a>
-                      <ul class="sub">
-                          <li><a class="" href="basic_table.html">Basic Table</a></li>
-                      </ul>
-                  </li>
-                  
-                  <li class="sub-menu">
-                      <a href="javascript:;" class="">
-                          <i class="icon_documents_alt"></i>
-                          <span>Pages</span>
-                          <span class="menu-arrow arrow_carrot-right"></span>
-                      </a>
-                      <ul class="sub">                          
-                          <li><a class="" href="profile.html">Profile</a></li>
-                          <li><a class="" href="login.html"><span>Login Page</span></a></li>
-                          <li><a class="" href="blank.html">Blank Page</a></li>
-                          <li><a class="" href="404.html">404 Error</a></li>
+                          <li><a class="" href="/general">Age based</a></li>
+                          <li><a class="" href="/stateBased">State based</a></li>
+                          <li><a class="" href="/metal">Metal level based</a></li>
+                          <li><a class="" href="/premiumDiff">Premium Difference</a></li>
+                          <li><a class="" href="/deaths">Death Per Year</a></li>
                       </ul>
                   </li>
                   
@@ -384,7 +336,7 @@
 				<div class="col-lg-12">
 					<h3 class="page-header"><i class="icon_piechart"></i> Chart</h3>
 					<ol class="breadcrumb">
-						<li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
+						<li><i class="fa fa-home"></i><a href="/">Home</a></li>
 						<li><i class="icon_piechart"></i>Chart</li>
 						
 					</ol>
@@ -423,64 +375,26 @@
                               </section>
                           </div>
                       </div>
-                      <div class="row">
-                          <!-- Radar -->
-                          <div class="col-lg-6">
-                              <section class="panel">
-                                  <header class="panel-heading">
-                                      Radar
-                                  </header>
-                                  <div class="panel-body text-center">
-                                      <canvas id="radar" height="300" width="400"></canvas>
-                                  </div>
-                              </section>
-                          </div>
-                          <!-- Polar Area -->
-                          <div class="col-lg-6">
-                              <section class="panel">
-                                  <header class="panel-heading">
-                                      Polar Area
-                                  </header>
-                                  <div class="panel-body text-center">
-                                      <canvas id="polarArea" height="300" width="400"></canvas>
-                                  </div>
-                              </section>
-                          </div>
-                      </div>
-                      <div class="row">
-                          
-                          <!-- Pie -->
-                          <div class="col-lg-6">
-                              <section class="panel">
-                                  <header class="panel-heading">
-                                      Pie
-                                  </header>
-                                  <div class="panel-body text-center">
-                                      <canvas id="pie" height="300" width="400"></canvas>
-                                  </div>
-                              </section>
-                          </div>
-                          <!-- Doughnut -->
-                          <div class="col-lg-6">
-                              <section class="panel">
-                                  <header class="panel-heading">
-                                      Doughnut
-                                  </header>
-                                  <div class="panel-body text-center">
-                                      <canvas id="doughnut" height="300" width="400"></canvas>
-                                  </div>
-                              </section>
-                          </div>
-                      </div>
                   </div>
                       </div>
                       </div>
                     </section>
-              </div>
-              <!-- chart morris start -->
+      </section>
+      <!--main content end-->
+      <div class="text-right">
+            <div class="credits">
+                <!-- 
+                    All the links in the footer should remain intact. 
+                    You can delete the links only if you purchased the pro version.
+                    Licensing information: https://bootstrapmade.com/license/
+                    Purchase the pro version form: https://bootstrapmade.com/buy/?theme=NiceAdmin
+                -->
+                <a href="https://bootstrapmade.com/free-business-bootstrap-themes-website-templates/">Business Bootstrap Themes</a> by <a href="https://bootstrapmade.com/">BootstrapMade</a>
             </div>
-            
-            <div class="modal fade" id="myModal1" style="margin-top:50px" role="dialog" >
+        </div>
+    </section>
+    
+    <div class="modal fade" id="myModal1" style="margin-top:50px" role="dialog" >
             <div class="modal-dialog">
                 <!-- Modal content-->
                 <div class="modal-content">
@@ -504,20 +418,6 @@
                 </div>
             </div>
         </div>
-      </section>
-      <!--main content end-->
-      <div class="text-right">
-            <div class="credits">
-                <!-- 
-                    All the links in the footer should remain intact. 
-                    You can delete the links only if you purchased the pro version.
-                    Licensing information: https://bootstrapmade.com/license/
-                    Purchase the pro version form: https://bootstrapmade.com/buy/?theme=NiceAdmin
-                -->
-                <a href="https://bootstrapmade.com/free-business-bootstrap-themes-website-templates/">Business Bootstrap Themes</a> by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-            </div>
-        </div>
-    </section>
     <!-- container section end -->
     <!-- javascripts -->
     <script src="js/jquery.js"></script>
