--- a/WiseCare/WiseCareApp/views/deaths.ejs
+++ b/WiseCare/WiseCareApp/views/deaths.ejs
@@ -308,69 +308,6 @@
                           <span>Dashboard</span>
                       </a>
                   </li>
-				  <li class="sub-menu">
-                      <a href="javascript:;" class="">
-                          <i class="icon_document_alt"></i>
-                          <span>Forms</span>
-                          <span class="menu-arrow arrow_carrot-right"></span>
-                      </a>
-                      <ul class="sub">
-                          <li><a class="" href="form_component.html">Form Elements</a></li>                          
-                          <li><a class="" href="form_validation.html">Form Validation</a></li>
-                      </ul>
-                  </li>       
-                  <li class="sub-menu">
-                      <a href="javascript:;" class="">
-                          <i class="icon_desktop"></i>
-                          <span>UI Fitures</span>
-                          <span class="menu-arrow arrow_carrot-right"></span>
-                      </a>
-                      <ul class="sub">
-                          <li><a class="" href="general.html">Components</a></li>
-                          <li><a class="" href="buttons.html">Buttons</a></li>
-                          <li><a class="" href="grids.html">Grids</a></li>
-                      </ul>
-                  </li>
-                  <li>
-                      <a class="" href="widgets.html">
-                          <i class="icon_genius"></i>
-                          <span>Widgets</span>
-                      </a>
-                  </li>
-                  <li>                     
-                      <a class="" href="chart-chartjs.html">
-                          <i class="icon_piechart"></i>
-                          <span>Charts</span>
-                          
-                      </a>
-                                         
-                  </li>
-                             
-                  <li class="sub-menu">
-                      <a href="javascript:;" class="">
-                          <i class="icon_table"></i>
-                          <span>Tables</span>
-                          <span class="menu-arrow arrow_carrot-right"></span>
-                      </a>
-                      <ul class="sub">
-                          <li><a class="" href="basic_table.html">Basic Table</a></li>
-                      </ul>
-                  </li>
-                  
-                  <li class="sub-menu">
-                      <a href="javascript:;" class="">
-                          <i class="icon_documents_alt"></i>
-                          <span>Pages</span>
-                          <span class="menu-arrow arrow_carrot-right"></span>
-                      </a>
-                      <ul class="sub">                          
-                          <li><a class="" href="profile.html">Profile</a></li>
-                          <li><a class="" href="login.html"><span>Login Page</span></a></li>
-                          <li><a class="" href="blank.html">Blank Page</a></li>
-                          <li><a class="" href="404.html">404 Error</a></li>
-                      </ul>
-                  </li>
-                  
               </ul>
               <!-- sidebar menu end-->
           </div>
@@ -384,7 +321,7 @@
 				<div class="col-lg-12">
 					<h3 class="page-header"><i class="icon_piechart"></i> Chart</h3>
 					<ol class="breadcrumb">
-						<li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
+						<li><i class="fa fa-home"></i><a href="/">Home</a></li>
 						<li><i class="icon_piechart"></i>Chart</li>
 						
 					</ol>
@@ -413,64 +350,15 @@
                           </div>                      
                           <!-- Bar -->
                       </div>
-                      <div class="row">
-                          <!-- Radar -->
-                          <div class="col-lg-6">
-                              <section class="panel">
-                                  <header class="panel-heading">
-                                      Radar
-                                  </header>
-                                  <div class="panel-body text-center">
-                                      <canvas id="radar" height="300" width="400"></canvas>
-                                  </div>
-                              </section>
-                          </div>
-                          <!-- Polar Area -->
-                          <div class="col-lg-6">
-                              <section class="panel">
-                                  <header class="panel-heading">
-                                      Polar Area
-                                  </header>
-                                  <div class="panel-body text-center">
-                                      <canvas id="polarArea" height="300" width="400"></canvas>
-                                  </div>
-                              </section>
-                          </div>
-                      </div>
-                      <div class="row">
-                          
-                          <!-- Pie -->
-                          <div class="col-lg-6">
-                              <section class="panel">
-                                  <header class="panel-heading">
-                                      Pie
-                                  </header>
-                                  <div class="panel-body text-center">
-                                      <canvas id="pie" height="300" width="400"></canvas>
-                                  </div>
-                              </section>
-                          </div>
-                          <!-- Doughnut -->
-                          <div class="col-lg-6">
-                              <section class="panel">
-                                  <header class="panel-heading">
-                                      Doughnut
-                                  </header>
-                                  <div class="panel-body text-center">
-                                      <canvas id="doughnut" height="300" width="400"></canvas>
-                                  </div>
-                              </section>
-                          </div>
-                      </div>
                   </div>
+                      </div>
+                      </section>
                       </div>
                       </div>
                     </section>
-              </div>
-              <!-- chart morris start -->
-            </div>
-            
-            <div class="modal fade" id="myModal1" style="margin-top:50px" role="dialog" >
+      </section>
+      
+      <div class="modal fade" id="myModal1" style="margin-top:50px" role="dialog" >
             <div class="modal-dialog">
                 <!-- Modal content-->
                 <div class="modal-content">
@@ -494,7 +382,6 @@
                 </div>
             </div>
         </div>
-      </section>
       <!--main content end-->
       <div class="text-right">
             <div class="credits">
