--- a/WiseCare/WiseCareApp/views/Claims.ejs
+++ b/WiseCare/WiseCareApp/views/Claims.ejs
@@ -308,7 +308,27 @@
                           <span>Dashboard</span>
                       </a>
                   </li>
-              </ul>
+             		<li class="sub-menu">
+                      <a href="javascript:;" class="">
+                          <i class="icon_desktop"></i>
+                          <span>Graphs</span>
+                          <span class="menu-arrow arrow_carrot-right"></span>
+                      </a>
+                      <ul class="sub">
+                          <li><a class="" href="/general">Age based</a></li>
+                          <li><a class="" href="/stateBased">State based</a></li>
+                          <li><a class="" href="/metal">Metal level based</a></li>
+                          <li><a class="" href="/premiumDiff">Premium Difference</a></li>
+                          <li><a class="" href="/deaths">Death Per Year</a></li>
+                          <li><a class="" href="/insured">Insured</a></li>
+                          <li><a class="" href="/claims">Claims</a></li>
+                      </ul>
+                  </li>
+                  </ul>
+                  
+              
+              
+              
               <!-- sidebar menu end-->
           </div>
       </aside>
@@ -371,16 +391,11 @@
     </section>
     <!-- container section end -->
     <!-- javascripts -->
-    <script src="js/jquery.js"></script>
-    <script src="js/jquery-1.8.3.min.js"></script>
+   <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <!-- nice scroll -->
     <script src="js/jquery.scrollTo.min.js"></script>
     <script src="js/jquery.nicescroll.js" type="text/javascript"></script>
-    <!-- chartjs -->
-    <script src="assets/chart-master/Chart.js"></script>
-    <!-- custom chart script for this page only-->
-    <script src="js/chartjs-custom.js"></script>
     <!--custome script for all page-->
     <script src="js/scripts.js"></script>
 
