Added updated graphs

--- a/WiseCare/WiseCareApp/views/Claims.ejs
+++ b/WiseCare/WiseCareApp/views/Claims.ejs
@@ -8,7 +8,7 @@
     <meta name="keyword" content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
     <link rel="shortcut icon" href="img/favicon.png">
 
-    <title>Charts | Creative - Bootstrap 3 Responsive Admin Template</title>
+    <title>Wise Care</title>
 
     <!-- Bootstrap CSS -->    
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -308,7 +308,7 @@
                           <span>Dashboard</span>
                       </a>
                   </li>
-             		<li class="sub-menu">
+                <li class="sub-menu">
                       <a href="javascript:;" class="">
                           <i class="icon_desktop"></i>
                           <span>Graphs</span>
@@ -337,16 +337,16 @@
       <!--main content start-->      
       <section id="main-content">
         <section class="wrapper">
-		<div class="row">
-				<div class="col-lg-12">
-					<h3 class="page-header"><i class="icon_piechart"></i> Chart</h3>
-					<ol class="breadcrumb">
-						<li><i class="fa fa-home"></i><a href="/">Home</a></li>
-						<li><i class="icon_piechart"></i>Chart</li>
-						
-					</ol>
-				</div>
-			</div>
+    <div class="row">
+        <div class="col-lg-12">
+          <h3 class="page-header"><i class="icon_piechart"></i> Chart</h3>
+          <ol class="breadcrumb">
+            <li><i class="fa fa-home"></i><a href="/">Home</a></li>
+            <li><i class="icon_piechart"></i>Chart</li>
+            
+          </ol>
+        </div>
+      </div>
             <div class="row">
               <!-- chart morris start -->
               <div class="col-lg-12">
@@ -365,6 +365,21 @@
                                   </header>
                                   <div class="panel-body text-center">
                                       <iframe id="igraph" height="425px" width="100%" style="border:none;" seamless="seamless" scrolling="no" src="//plot.ly/~surendrary/10.embed?link=false&modebar=true"></iframe>
+                                     
+                                  </div>
+                              </section>
+                          </div>                      
+                          <!-- Bar -->
+                      </div>
+                      <div class="row">
+                          <!-- Line -->
+                          <div class="col-lg-12">
+                              <section class="panel">
+                               <header class="panel-heading">
+                                      Markerplace Insuerer Number 2013-2015
+                                  </header>
+                                  <div class="panel-body text-center">
+                                      <iframe id="igraph" height="425px" width="100%" style="border:none;" seamless="seamless" scrolling="no" src="//plot.ly/~suchetamandal/50.embed?link=false&modebar=true"></iframe>
                                      
                                   </div>
                               </section>
