--- a/WiseCare/WiseCareApp/views/form_validation.ejs
+++ b/WiseCare/WiseCareApp/views/form_validation.ejs
@@ -8,7 +8,7 @@
     <meta name="keyword" content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
     <link rel="shortcut icon" href="img/favicon.png">
 
-    <title>Form Validation | Creative - Bootstrap 3 Responsive Admin Template</title>
+     <title>Wise Care</title>
 
     <!-- Bootstrap CSS -->    
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -349,15 +349,15 @@
                                           </div>
                                       </div>
                                       <div class="form-group ">
-                                          <label for="curl" class="control-label col-lg-2">Website</label>
+                                          <label for="curl" class="control-label col-lg-2">Metal Level</label>
                                           <div class="col-lg-10">
-                                              <input class="form-control " id="curl" type="url" name="url" />
+                                              <input class="form-control " id="curl" name="url" />
                                           </div>
                                       </div>
                                       <div class="form-group ">
-                                          <label for="cname" class="control-label col-lg-2">Subject <span class="required">*</span></label>
+                                          <label for="cname" class="control-label col-lg-2">Premium <span class="required">*</span></label>
                                           <div class="col-lg-10">
-                                              <input class="form-control" id="subject" name="subject" minlength="5" type="text" required />
+                                              <input class="form-control" id="premium" name="subject" minlength="5" type="text" required />
                                           </div>
                                       </div>                                      
                                       <div class="form-group ">
@@ -368,7 +368,7 @@
                                       </div>
                                       <div class="form-group">
                                           <div class="col-lg-offset-2 col-lg-10">
-                                              <button class="btn btn-primary" type="submit">Save</button>
+                                              <button class="btn btn-primary" type="submit">Submit Review</button>
                                               <button class="btn btn-default" type="button">Cancel</button>
                                           </div>
                                       </div>
