--- a/WiseCare/WiseCareApp/views/index.ejs
+++ b/WiseCare/WiseCareApp/views/index.ejs
@@ -8,7 +8,7 @@
     <meta name="keyword" content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
     <link rel="shortcut icon" href="img/favicon.png">
 
-    <title>Creative - Bootstrap Admin Template</title>
+    <title>Wise Care</title>
 
     <!-- Bootstrap CSS -->    
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -180,7 +180,7 @@
 				
 				<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
 					<div class="info-box dark-bg">
-						<div class="title"><img src = "/img/2016-avg-premium.png" width="100%" height = "99%" data-toggle="modal" data-target="#myModal3"></div>						
+						<div class="title"><img src = "/img/premium-diff-2015-2016.png" width="100%" height = "99%" data-toggle="modal" data-target="#myModal3"></div>						
 					</div><!--/.info-box-->			
 				</div><!--/.col-->
 				
@@ -220,7 +220,7 @@
                 <div class="modal-content">
                     
                     <div class="modal-body" style="padding:0px">
-                        <iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="//plot.ly/~suchetamandal/30.embed?link=false&modebar=true" height="525px" width="100%"></iframe>
+                        <iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="//plot.ly/~suchetamandal/54.embed?link=false&modebar=true" height="525px" width="100%"></iframe>
                     </div>
                     
                 </div>
