--- a/WiseCare/WiseCareApp/views/ageBased.ejs
+++ b/WiseCare/WiseCareApp/views/ageBased.ejs
@@ -8,7 +8,7 @@
     <meta name="keyword" content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
     <link rel="shortcut icon" href="img/favicon.png">
 
-    <title>Charts | Creative - Bootstrap 3 Responsive Admin Template</title>
+    <title>Wise Care</title>
 
     <!-- Bootstrap CSS -->    
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -338,7 +338,7 @@
                                       2016 Average Premium
                                   </header>
                                   <div class="panel-body text-center">
-                                      <img src = "/img/2016-avg-premium.png" width="100%" height = "350px" data-toggle="modal" data-target="#myModal3">
+                                      <img src = "/img/2016-avg-premium.jpeg" width="100%" height = "350px" data-toggle="modal" data-target="#myModal3">
                                   </div>
                               </section>
                           </div>                      
@@ -349,10 +349,33 @@
                                       2017 Average Premium
                                   </header>
                                   <div class="panel-body text-center">
-                                      <img src = "/img/2017-avg-premium.png" width="100%" height = "350px" data-toggle="modal" data-target="#myModal4">
+                                      <img src = "/img/2017-avg-premium.jpeg" width="100%" height = "350px" data-toggle="modal" data-target="#myModal4">
                                   </div>
                               </section>
                           </div>
+                      </div>
+                      <div class="row">
+                          <!-- Line -->
+                          <div class="col-lg-6">
+                              <section class="panel">
+                               <header class="panel-heading">
+                                      Average Data 2016 and 2017 and Increment as per age group
+                                  </header>
+                                  <div class="panel-body text-center">
+                                      <img src = "/img/Average Data 2016 and 2017 and Increment.png" width="100%" height = "350px" data-toggle="modal" data-target="#myModal5">
+                                  </div>
+                              </section>
+                          </div>
+                          <div class="col-lg-6">
+                              <section class="panel">
+                                  <header class="panel-heading">
+                                      Population Based on Age Distribution
+                                  </header>
+                                  <div class="panel-body text-center">
+                                      <img src = "img/population-age-pie.png" width="100%" height = "350px" data-toggle="modal" data-target="#myModal6">
+                                  </div>
+                              </section>
+                          </div>                      
                       </div>
                   </div>
                       </div>
@@ -381,6 +404,30 @@
                     
                     <div class="modal-body" style="padding:0px">
                         <iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="//plot.ly/~suchetamandal/32.embed?link=false&modebar=true" height="525px" width="100%"></iframe>
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
+        <div class="modal fade" id="myModal5"  role="dialog" >
+            <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    
+                    <div class="modal-body" style="padding:0px">
+                        <iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="//plot.ly/~suchetamandal/38.embed?link=false&modebar=true" height="525px" width="100%"></iframe>
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
+        <div class="modal fade" id="myModal6"  role="dialog" >
+            <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    
+                    <div class="modal-body" style="padding:0px">
+                        <iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="//plot.ly/~suchetamandal/46.embed?link=false&modebar=true" height="525px" width="100%"></iframe>
                     </div>
                     
                 </div>
