--- a/WiseCare/WiseCareApp/views/deaths.ejs
+++ b/WiseCare/WiseCareApp/views/deaths.ejs
@@ -7,8 +7,8 @@
     <meta name="author" content="GeeksLabs">
     <meta name="keyword" content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
     <link rel="shortcut icon" href="img/favicon.png">
-
-    <title>Charts | Creative - Bootstrap 3 Responsive Admin Template</title>
+    
+     <title>Wise Care</title>
 
     <!-- Bootstrap CSS -->    
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -341,7 +341,7 @@
                           <div class="col-lg-12">
                               <section class="panel">
                                <header class="panel-heading">
-                                      Deaths per year
+                                      Death Rate per year 2010 to 2016
                                   </header>
                                   <div class="panel-body text-center">
                                        <iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="//plot.ly/~suchetamandal/26.embed?link=false&modebar=true" height="425px" width="100%"></iframe>
