--- a/WiseCare/WiseCareApp/views/insured.ejs
+++ b/WiseCare/WiseCareApp/views/insured.ejs
@@ -8,7 +8,7 @@
     <meta name="keyword" content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
     <link rel="shortcut icon" href="img/favicon.png">
 
-    <title>Charts | Creative - Bootstrap 3 Responsive Admin Template</title>
+    <title>Wise Care</title>
 
     <!-- Bootstrap CSS -->    
     <link href="css/bootstrap.min.css" rel="stylesheet">
