--- a/WiseCare/WiseCareApp/views/stateBased.ejs
+++ b/WiseCare/WiseCareApp/views/stateBased.ejs
@@ -8,7 +8,7 @@
     <meta name="keyword" content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
     <link rel="shortcut icon" href="img/favicon.png">
 
-    <title>Charts | Creative - Bootstrap 3 Responsive Admin Template</title>
+    <title>Wise Care</title>
 
     <!-- Bootstrap CSS -->    
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -375,6 +375,29 @@
                               </section>
                           </div>
                       </div>
+                      <div class="row">
+                          <!-- Line -->
+                          <div class="col-lg-6">
+                              <section class="panel">
+                               <header class="panel-heading">
+                                      Median Annual Household Income state wise
+                                  </header>
+                                  <div class="panel-body text-center">
+                                      <img src = "/img/median_household_income.png" width="100%" height = "350px" data-toggle="modal" data-target="#myModal3">
+                                  </div>
+                              </section>
+                          </div> 
+                          <div class="col-lg-6">
+                              <section class="panel">
+                               <header class="panel-heading">
+                                      Uninsured Low Income Adult (19-64)
+                                  </header>
+                                  <div class="panel-body text-center">
+                                      <img src = "/img/uninsured_of_low_income_adult.png" width="100%" height = "350px" data-toggle="modal" data-target="#myModal4">
+                                  </div>
+                              </section>
+                          </div>                     
+                      </div>
                   </div>
                       </div>
                       </div>
@@ -413,6 +436,30 @@
                     
                     <div class="modal-body" style="padding:0px">
                         <iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="//plot.ly/~suchetamandal/22.embed?link=false&modebar=true" height="525px" width="100%"></iframe>
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
+        <div class="modal fade" id="myModal3" style="margin-top:50px" role="dialog" >
+            <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    
+                    <div class="modal-body" style="padding:0px">
+                        <iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="//plot.ly/~suchetamandal/52.embed?link=false&modebar=true" height="525px" width="100%"></iframe>
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
+        <div class="modal fade" id="myModal4" style="margin-top:50px" role="dialog" >
+            <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    
+                    <div class="modal-body" style="padding:0px">
+                        <iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="//plot.ly/~suchetamandal/58.embed?link=false&modebar=true" height="525px" width="100%"></iframe>
                     </div>
                     
                 </div>
